--- a/app/src/main/res/layout/alert_frog_data.xml
+++ b/app/src/main/res/layout/alert_frog_data.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:text="null_frog_name"
             android:textSize="24sp"
-            android:layout_toRightOf="@id/frog_src"
+            android:layout_toRightOf="@id/iv_power"
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:textColor="#FFFFFF"
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SIZE : null"
-            android:layout_toRightOf="@id/frog_src"
+            android:layout_toRightOf="@id/iv_power"
             android:layout_below="@id/frog_property"
             android:textSize="16sp"
             android:textColor="#FFFFFF"
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="POWER: null"
-            android:layout_toRightOf="@id/frog_src"
+            android:layout_toRightOf="@id/iv_power"
             android:layout_below="@id/frog_size"
             android:textSize="16sp"
             android:textColor="#FFFFFF"
