--- a/app/src/main/res/layout/listview_house_frog_item.xml
+++ b/app/src/main/res/layout/listview_house_frog_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/frog_src"
+            android:id="@+id/iv_power"
             android:layout_width="96dp"
             android:layout_height="96dp"
             android:layout_centerVertical="true"
@@ -21,7 +21,7 @@
             android:id="@+id/linear_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/frog_src"
+            android:layout_toRightOf="@id/iv_power"
             android:layout_centerVertical="true"
             android:orientation="vertical"
             android:paddingBottom="16dp"
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:text="null_frog_name"
                 android:textSize="24sp"
-                android:layout_toRightOf="@id/frog_src"
+                android:layout_toRightOf="@id/iv_power"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
                 android:textColor="#FFFFFF"
@@ -63,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SIZE : null"
-                android:layout_toRightOf="@id/frog_src"
+                android:layout_toRightOf="@id/iv_power"
                 android:layout_below="@id/frog_property"
                 android:textSize="16sp"
                 android:textColor="#FFFFFF"
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="POWER: null"
-                android:layout_toRightOf="@id/frog_src"
+                android:layout_toRightOf="@id/iv_power"
                 android:layout_below="@id/frog_size"
                 android:textSize="16sp"
                 android:textColor="#FFFFFF"
