--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -102,8 +102,8 @@
             <ImageView
                 android:id="@+id/main_frog_icon"
                 android:padding="4dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="1dp"
+                android:layout_height="1dp"
                 android:src="@drawable/main_frog_jelly"
                 android:layout_gravity="center"/>
         </FrameLayout>
