--- a/app/src/main/res/values/theme_transparent_background.xml
+++ b/app/src/main/res/values/theme_transparent_background.xml
@@ -1,8 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.TransparentBackground"
+    <style name="Theme.AlertTransparentBackground"
         parent="android:Theme.Dialog">
             <item name="android:windowBackground">@android:color/transparent</item>
             <item name="android:backgroundDimEnabled">false</item>
     </style>
+
+    <style name="Theme.ActivityTransparentBackground" parent="@style/Theme.AppCompat">
+        <!--Titlebar 없애는 옵션
+            true : Titlebar x
+            false : Titlebar o
+        -->
+        <item name="windowNoTitle">true</item>
+        <!-- 투명정도를 나타내는 색-->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <!--
+        android:backgroundDimEnabled
+        true - 반투명 검정 /  false - 완전 투명
+        -->
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+    5. 마지막으로 A
 </resources>
