--- a/app/src/main/res/layout/activity_frog_book.xml
+++ b/app/src/main/res/layout/activity_frog_book.xml
@@ -1,13 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".egg.ActivityFrogBook">
+    tools:context=".egg.ActivityFrogBook"
+    android:background="@color/black">
 
-    <RelativeLayout
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#333333"/>
-</androidx.cardview.widget.CardView>
+        android:id="@+id/recyclerview_book"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="horizontal"/>
+
+    <ImageView
+        android:layout_margin="16dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/main_cancel_button"
+        android:onClick="cancel"/>
+
+    <ImageButton
+        android:id="@+id/left_button"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:backgroundTint="#FF000000"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:onClick="left"
+        android:src="@drawable/ic_arrow_left"/>
+
+    <ImageButton
+        android:id="@+id/right_button"
+        android:layout_width="80dp"
+        android:onClick="right"
+        android:layout_height="80dp"
+        android:backgroundTint="#FF000000"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true"
+        android:rotation="180"
+        android:src="@drawable/ic_arrow_left"/>
+
+
+</RelativeLayout>
