--- a/app/src/main/res/layout/activity_frog_book.xml
+++ b/app/src/main/res/layout/activity_frog_book.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".egg.ActivityFrogBook"
+    android:padding="8dp"
     android:background="@color/black">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -16,14 +17,14 @@
 
     <ImageView
         android:layout_margin="16dp"
-        android:layout_width="40dp"
+        android:layout_width="64dp"
         android:layout_height="40dp"
         android:src="@drawable/main_cancel_button"
         android:onClick="cancel"/>
 
     <ImageButton
         android:id="@+id/left_button"
-        android:layout_width="80dp"
+        android:layout_width="64dp"
         android:layout_height="80dp"
         android:backgroundTint="#FF000000"
         android:layout_centerVertical="true"
@@ -33,7 +34,7 @@
 
     <ImageButton
         android:id="@+id/right_button"
-        android:layout_width="80dp"
+        android:layout_width="64dp"
         android:onClick="right"
         android:layout_height="80dp"
         android:backgroundTint="#FF000000"
