--- a/app/src/main/res/layout/fragment_trade_page.xml
+++ b/app/src/main/res/layout/fragment_trade_page.xml
@@ -20,7 +20,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
-            android:src="@drawable/main_frog_jelly"/>
+            android:src="@drawable/normal"/>
 
 
 
