--- a/app/src/main/res/layout/activity_fight.xml
+++ b/app/src/main/res/layout/activity_fight.xml
@@ -24,7 +24,7 @@
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_below="@id/enemy_name"
-        android:src="@drawable/main_frog_jelly"/>
+        android:src="@drawable/normal"/>
 
     <LinearLayout
         android:layout_width="match_parent"
