--- a/app/src/main/res/layout/book_page.xml
+++ b/app/src/main/res/layout/book_page.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="16dp"
+    android:background="@color/black">
 
+    <ImageView
+        android:layout_width="320dp"
+        android:layout_height="320dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/frog_book_background"/>
     <ImageView
         android:padding="80dp"
         android:id="@+id/iv_frog"
@@ -24,21 +33,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="40sp"
-        android:layout_alignLeft="@+id/iv_frog"
-        android:layout_marginTop="80dp"
+
+        android:layout_marginTop="64dp"
         android:layout_below="@+id/center"
         android:text="Frog Species"
         android:textStyle="bold"
         android:textColor="@color/white"/>
-    <TextView
-        android:id="@+id/explain"
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/title"
         android:layout_below="@+id/title"
-        android:layout_marginTop="16dp"
-        android:text="이 개구리는 아주 평범한 개구리 입니다."
-        android:textSize="24sp"
-        android:textColor="@color/white"/>
+        >
+        <TextView
+            android:id="@+id/explain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/title"
+            android:layout_marginTop="16dp"
+            android:text="이 개구리는 아주 평범한 개구리 입니다."
+            android:textSize="24sp"
+            android:textColor="@color/white"/>
+
+    </ScrollView>
+
 
 </RelativeLayout>
