debug before design

--- a/app/src/main/res/values/book_page_list.xml
+++ b/app/src/main/res/values/book_page_list.xml
@@ -5,7 +5,7 @@
     <string-array name="species_explain">
         <item>아주 평~범한 개구리, 좋게 말하면 무한한 가능성이 있다는 이야기이다.</item>
         <item>어느날 수상한 거미에게 물려 죽을 뻔한 개구리, 그때부터 마치 "누구 처럼" 거미줄을 쏠 수 있게 되었다고 한다.</item>
-        <item>미치광이 과학자의 실험실 연구 재료였던 개구리, 계속되는 연구에 스트레스를 받은 개구리는 등에 뾰루지가 나기 시작하였다 그런데 이 뾰루지..심상치않다...</item>
+        <item>미치광이 과학자의 실험실 연구 재료였던 개구리, 계속되는 실험에 스트레스를 받은 개구리는 등에 뾰루지가 나기 시작하였다 그런데 이 뾰루지..심상치않다...</item>
         <item>단것을 무척이나 좋아하는 개구리가 인간들의 젤리푸딩을 탐내다 커다란 젤리푸딩 속에 빠져버렸다. 탈출하기 위해 모든 젤리를 먹었치웠더니 몸이 젤리로 변했다. 너무나 달콤향기에 젤리구리에게는 파리가 계속꼬인다.
         \n\n</item>
         <item>아직도 많은 베일에 싸여 있는 개구리, 떠도는 소문으로 이 저승구리를 목격한 개구리들은 모두 이 세상 개구리가 아니라고 한다...</item>
