--- a/app/src/main/res/layout/activity_frog_book.xml
+++ b/app/src/main/res/layout/activity_frog_book.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".egg.ActivityFrogBook"
+    tools:context="com.pyrion.game.poison_frog.egg.ActivityFrogBook"
     android:padding="8dp"
     android:background="@color/black">
 
