--- a/app/src/main/res/layout/activity_temp.xml
+++ b/app/src/main/res/layout/activity_temp.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".center.ItemStore.ActivityItemStore">
+    tools:context="com.pyrion.game.poison_frog.center.ItemStore.ActivityItemStore">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
