--- a/app/src/main/res/layout/alert_is_buy_new_frog.xml
+++ b/app/src/main/res/layout/alert_is_buy_new_frog.xml
@@ -1,20 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
+    android:layout_gravity="center"
     android:layout_height="wrap_content"
-    android:background="@drawable/fly_wood_notice"
-    android:layout_gravity="center">
+    android:layout_width="wrap_content">
+
+    <ImageView
+        android:id="@+id/wood"
+        android:layout_width="240dp"
+        android:layout_height="160dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/fly_wood_notice"/>
 
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
-        app:layout_constraintLeft_toLeftOf="@id/iv"
-        app:layout_constraintBottom_toTopOf="@+id/iv"
+        android:layout_toRightOf="@id/cancel_button"
         android:textStyle="bold"
         android:textSize="16dp"
         android:textColor="@color/white"
@@ -23,19 +28,18 @@
 
     <ImageView
         android:id="@+id/iv"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:padding="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv"
-        android:src="@drawable/main_frog_jelly"/>
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_alignLeft="@id/wood"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="24dp"
+        android:src="@drawable/normal"/>
 
     <ImageView
         android:id="@+id/cancel_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:layout_constraintLeft_toRightOf="@+id/pay_button"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_alignLeft="@id/wood"
         android:src="@drawable/main_cancel_button" />
 
     <LinearLayout
@@ -43,9 +47,8 @@
         android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@+id/iv"
-        app:layout_constraintBottom_toBottomOf="@+id/iv"
-        app:layout_constraintStart_toEndOf="@+id/iv">
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/iv">
 
 
         <TextView
@@ -53,8 +56,9 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:text="-100"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="8dp"
             android:textSize="24sp"
+            android:layout_marginTop="4dp"
             android:textColor="@color/white"
             android:textStyle="bold" />
         <ImageView
@@ -67,4 +71,4 @@
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
