--- a/app/src/main/res/layout/book_page.xml
+++ b/app/src/main/res/layout/book_page.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:background="@color/black">
+    android:padding="16dp">
 
     <ImageView
         android:layout_width="320dp"
