--- a/app/src/main/res/layout/fragment_trade_page.xml
+++ b/app/src/main/res/layout/fragment_trade_page.xml
@@ -3,53 +3,96 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black"
     android:orientation="vertical">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="320dp"
+        >
+
+
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/trade_center_bg"/>
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/trade_center_bg" />
+
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/top_wood"
+            android:layout_alignParentTop="true"
+            android:paddingBottom="80dp"
+            />
+
         <ImageView
             android:id="@+id/trade_frog_center_src"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:src="@drawable/normal"/>
 
-
-
-
-        <FrameLayout
+        <LinearLayout
+            android:id="@+id/icon"
+            android:layout_alignParentBottom="true"
+            android:padding="4dp"
             android:layout_width="wrap_content"
             android:layout_height="80dp"
-            android:layout_gravity="bottom">
+            android:layout_alignParentRight="true"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/camera"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_map"
+                android:background="@drawable/icon_bg"
+                android:padding="8dp"
+                android:layout_marginRight="8dp"
+                />
+
+            <ImageView
+                android:layout_gravity="center_vertical"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:src="@drawable/ic_camera"
+                android:background="@drawable/icon_bg"
+                android:padding="8dp"
+                />
+
+
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/notice"
+            android:layout_width="match_parent"
+            android:layout_toLeftOf="@id/icon"
+            android:layout_height="80dp"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="4dp"
+            >
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@drawable/fly_wood_notice"/>
+                android:background="@drawable/wood_mid"/>
             <TextView
                 android:id="@+id/notice_text"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16dp"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:text="개구리를 꾹 누르면 근처 사람에게 공유됩니다."
-                android:textColor="@color/black"
                 android:layout_gravity="center"
+                android:textStyle="bold"
+                android:text="개구리를 누르면 공유됩니다."
+                android:textColor="@color/white"
                 />
-            <!--        TODO 다른사람에게 개구리를 빼앗기지 않게 조심하세요.-->
-            <!--        TODO 근처에 개구리가 너무 많습니다. Max3마리-->
 
         </FrameLayout>
-    </FrameLayout>
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
