--- a/app/src/main/res/layout/listview_house_event_item.xml
+++ b/app/src/main/res/layout/listview_house_event_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/black"
+    android:background="@drawable/wood_mid"
     android:id="@+id/click_back_ground"
     android:padding="16dp">
 
@@ -35,7 +35,8 @@
             android:layout_height="40dp"
             android:src="@drawable/main_dollar"
             android:layout_alignBottom="@+id/main_house_icon"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:layout_margin="8dp"/>
 
     </RelativeLayout>
 
