--- a/app/src/main/res/layout/listview_house_frog_item.xml
+++ b/app/src/main/res/layout/listview_house_frog_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/black"
+    android:layout_height="160dp"
+    android:background="@drawable/wood_mid"
     android:padding="16dp"
     android:id="@+id/click_background">
 
@@ -84,9 +84,10 @@
             android:id="@+id/sell_house_icon"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/main_dollar"
             android:layout_alignBottom="@+id/linear_layout"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:layout_margin="8dp"
+            android:src="@drawable/main_dollar" />
 
     </RelativeLayout>
 </RelativeLayout>
